@@ -40,6 +40,7 @@
 - add map re-load to verbose logging.
 - fix handling of LDAP base dns with spaces.
 - handle MTAB_NOTUPDATED status return from mount.
+- when default master map, auto.master, is used also check for auto_master.
 
 18/06/2007 autofs-5.0.2
 -----------------------
